# module-6-kingahmadr

./: .coveragerc  .gitignore  Dockerfile  Dockerfile.Stage  README.md  app.py  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: 01-python-test.yml  02-docker-image.yml  docker-image.yml  python-test.yml
migrations/versions/: 405bb1d10bd7_migration_create_test_model.py  6c0a8ac6545a_create_animaltestmodel.py  9c55ca43bffa_re_migrate_all_db_model.py  fee09025b4a9_migration_user_model.py
src/: app.py
src/config/: dev.py  settings.py
src/migrations/versions/: ee4b6047fd45_initial_migration.py
src/models/: Models.py
src/router/: AnimalTest.py  Animals.py  Auth.py  EmployeeTest.py  Employees.py  Register.py  Routes.py  Swagger.py
src/services/: AuthService.py
tests/: skip_test_trial.py  test_animal.py  test_authentication.py  test_employee.py
